# anet

./: .codecov.yml  .env.example  .git-blame-ignore-revs  .gitignore  .grenrc.json  .travis.yml  ANET-Realm-export.json  ARCHITECTURE.md  CONTRIBUTING.md  Contributors.md  LICENSE.md  README.md  anet-dictionary.yml  anet.yml  apollo-mcp-config.yaml  apollo-mcp-server.sh  application.yml  azure-pipelines.yml  build.gradle  db-changelog-dev.yml  docker-compose.yaml  export-anet-realm.sh  insertBaseData-mssql.sql  insertBaseData-psql.sql  insertBaseData.sql  install-assistantservice.sh  keycloak-export.sh  keycloak-import.sh  lgtm.yml  logback-spring.xml  mcp-inspector.sh  mssql2pg.pl  mssql2sqlite.sh  prepare-psql.sql  renovate.json  requoteSqlIdentifiers.pl  settings.gradle  shiftleft.yml
anet-tools/: .gitignore  Pipfile  README.md  generate_pex.sh  install_dependencies.sh  pyproject.toml  setup.py
anet-tools/anet_tools/: connectLDAP.py  importAnetUsers.py  insertNewPeople.py  ldap-response-sample.txt
anet-tools/data/: anet_import_data.csv  existing_records.csv
anet-tools/datasamples/: anet_import_data.csv  anet_import_sample_data.csv  hashvalues.txt  people.csv  people.xlsx  unsuccessful_2020-11-06_13:24:07.951240.csv
anet-tools/src/: ad.py  db.py  how_to_use_data_import_API.ipynb
anet-tools/src/core/: ad.py  anet_business_objects.py  anet_import.py  base_methods.py  data.py  db.py  db_dataframe.py  helper_methods.py  mixin.py  models.py
anet-tools/src/examples/: import_from_ad_example.py  import_from_csv_example.py  import_from_xlsx_example.py  models.py  (+3 more)
(+2266 files in other folders)
